# crio.rs

./: .gitignore  Cargo.toml  IMPLEMENTATION-DETAILS.md  README.md
src/: lib.rs  main.rs
src/buffer/: buffer_pool_manager.rs  frame_header.rs  lru_k_replacer.rs  mod.rs  page_guard.rs
src/catalog/: mod.rs
src/common/: config.rs  error.rs  mod.rs  types.rs
src/execution/: mod.rs
src/index/: btree_index.rs  btree_iterator.rs  btree_page.rs  key_comparator.rs  mod.rs
src/storage/disk/: disk_manager.rs  disk_scheduler.rs  extent_allocator.rs  mod.rs
src/storage/page/: directory_page.rs  mod.rs  slotted_page.rs  table_page.rs
src/tuple/: data_type.rs  mod.rs  schema.rs  tuple.rs  value.rs
tests/: btree_test.rs  buffer_pool_test.rs  disk_manager_test.rs  lru_k_test.rs  slotted_page_test.rs  tuple_test.rs
