[package]
name = "crio"
version = "0.1.0"
edition = "2021"
description = "A disk-oriented RDBMS implementation in Rust"
license = "MIT"

[dependencies]
parking_lot = "0.12"
crossbeam-channel = "0.5"
thiserror = "1.0"
bytes = "1.5"

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"

[lib]
name = "crio"
path = "src/lib.rs"

[[bin]]
name = "crio"
path = "src/main.rs"
